--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aaron Petty - Portfolio</title>
-    https://cdn.tailwindcss.com</script>
-    <style>
+        <style>https://cdn.tailwindcss.com</script>
         body { background-color: #121212; color: #f5f5f5; }
         .fade-in { opacity: 0; transform: translateY(20px); transition: opacity 0.8s ease, transform 0.8s ease; }
         .fade-in.visible { opacity: 1; transform: translateY(0); }
