--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
     <section id="contact" class="py-20 px-6 text-center bg-gray-800">
         <h2 class="text-3xl font-bold mb-4">Contact Me</h2>
-        <p class="mb-2">Email: <a href="mailto:aaron@example.com" class="text-cyan-400">aaron@example.com</a></p>
-        <p>Phone: <span class="text-cyan-400">+44 1234 567890</span></p>
-        <p>Connect on <a href="https://linkedin.com/in/aaronpetty" class="text-cyan-400">LinkedIn</a> | <a href="https://github.com/YOUR_GITHUB_USERNAME" class="text-cyan-400">GitHub</a></p>
+        <p class="mb-2">Email: <a href="mailto:aaron@example.com" class="text-cyan-400">aaronpetty2007@gmail.com</a></p>
+        <p>Phone: <span class="text-cyan-400">+44 7848 873225</span></p>
+        <p>Connect on <a href="https://www.linkedin.com/in/aaron-petty-dss/" class="text-cyan-400">LinkedIn</a> | <a href="https://github.com/Aaron-Petty-DSS" class="text-cyan-400">GitHub</a></p>
     </section>
 
     <footer class="text-center py-6 bg-gray-900">
